# kernel_common

./: .gitignore  ANNOTATIONS  AndroidKernel.mk  BUILD.bazel  CPPLINT.cfg  DIR_METADATA  MAINTAINERS  Makefile  OWNERS  OWNERS_DrNo  OWNERS_staging  PRESUBMIT.cfg  PREUPLOAD.cfg  README.llvm  README_partner_predev.md  abi.bzl  abi_gki_aarch64_android_internal_whitelist  abi_gki_aarch64_cuttlefish  abi_gki_aarch64_cuttlefish_whitelist  abi_gki_aarch64_db845c  abi_gki_aarch64_db845c_whitelist  abi_gki_aarch64_exynos_whitelist  abi_gki_aarch64_goldfish_whitelist  abi_gki_aarch64_hikey960_whitelist  abi_gki_aarch64_qcom_whitelist  abi_gki_aarch64_sunxi_whitelist  abi_gki_aarch64_unisoc_whitelist  build-kernel.sh  build.config.aarch64  build.config.allmodconfig  build.config.amlogic  build.config.arm  build.config.common  build.config.constants  build.config.crashdump.aarch64  build.config.crashdump.x86_64  build.config.cuttlefish.aarch64  build.config.cuttlefish.x86_64  build.config.db845c  build.config.experimental  (+17 more)
drivers/gpu/arm/mali/: BUILD.bazel  Kbuild  Kconfig  Makefile  Mconfig  build.bp  mali_base_hwconfig_features.h  mali_base_hwconfig_issues.h  mali_kbase.h  mali_kbase_as_fault_debugfs.c  mali_kbase_as_fault_debugfs.h  mali_kbase_config.h  mali_kbase_config_defaults.h  mali_kbase_core_linux.c  mali_kbase_ctx_sched.c  mali_kbase_debug.h  mali_kbase_debug_mem_allocs.c  mali_kbase_debug_mem_view.c  mali_kbase_debug_mem_zones.c  mali_kbase_defs.h  mali_kbase_dummy_job_wa.c  mali_kbase_fence.h  mali_kbase_fence_ops.c  mali_kbase_gator.h  mali_kbase_gpu_metrics.c  mali_kbase_gpu_metrics.h  mali_kbase_gpuprops.c  mali_kbase_gpuprops_types.h  mali_kbase_gwt.c  mali_kbase_gwt.h  mali_kbase_hw.c  mali_kbase_hwaccess_time.h  mali_kbase_jd.c  mali_kbase_jd_debugfs.c  mali_kbase_js.c  mali_kbase_kinstr_jm.c  mali_kbase_kinstr_jm.h  mali_kbase_kinstr_prfcnt.c  mali_kbase_kinstr_prfcnt.h  mali_kbase_mem.c  (+20 more)
drivers/gpu/arm/mali/arbiter/: mali_kbase_arbif.c
drivers/gpu/arm/mali/backend/gpu/: Kbuild  mali_kbase_cache_policy_backend.c  mali_kbase_cache_policy_backend.h  mali_kbase_clk_rate_trace_mgr.c  mali_kbase_debug_job_fault_backend.c  mali_kbase_devfreq.c  mali_kbase_gpuprops_backend.c  mali_kbase_instr_backend.c  mali_kbase_irq_linux.c  mali_kbase_jm_hw.c  mali_kbase_jm_internal.h  mali_kbase_jm_rb.c  mali_kbase_js_backend.c  mali_kbase_l2_mmu_config.c  mali_kbase_model_dummy.c  mali_kbase_model_dummy.h  mali_kbase_model_error_generator.c  mali_kbase_model_linux.c  mali_kbase_model_linux.h  mali_kbase_pm_backend.c  mali_kbase_pm_ca.c  mali_kbase_pm_defs.h  mali_kbase_pm_driver.c  mali_kbase_pm_internal.h  mali_kbase_pm_metrics.c  mali_kbase_pm_policy.c  mali_kbase_time.c
drivers/gpu/arm/mali/context/: mali_kbase_context.c  mali_kbase_context.h
drivers/gpu/arm/mali/context/backend/: mali_kbase_context_csf.c  mali_kbase_context_jm.c
drivers/gpu/arm/mali/csf/: Kbuild  mali_kbase_csf.c  mali_kbase_csf.h  mali_kbase_csf_cpu_queue_debugfs.c  mali_kbase_csf_csg_debugfs.c  mali_kbase_csf_defs.h  mali_kbase_csf_firmware.c  mali_kbase_csf_firmware.h  mali_kbase_csf_firmware_cfg.c  mali_kbase_csf_firmware_cfg.h  mali_kbase_csf_firmware_core_dump.c  mali_kbase_csf_firmware_log.c  mali_kbase_csf_firmware_no_mali.c  mali_kbase_csf_heap_context_alloc.c  mali_kbase_csf_kcpu.c  mali_kbase_csf_kcpu.h  mali_kbase_csf_kcpu_fence_debugfs.c  mali_kbase_csf_kcpu_fence_debugfs.h  mali_kbase_csf_mcu_shared_reg.c  mali_kbase_csf_protected_memory.c  mali_kbase_csf_registers.h  mali_kbase_csf_reset_gpu.c  mali_kbase_csf_scheduler.c  mali_kbase_csf_scheduler.h  mali_kbase_csf_sync_debugfs.c  mali_kbase_csf_sync_debugfs.h  mali_kbase_csf_tiler_heap.c  mali_kbase_csf_tiler_heap_reclaim.c  mali_kbase_csf_timeout.c  mali_kbase_csf_tl_reader.c  mali_kbase_csf_trace_buffer.c  mali_kbase_csf_trace_buffer.h
drivers/gpu/arm/mali/debug/: Kbuild  mali_kbase_debug_ktrace.h  mali_kbase_debug_ktrace_defs.h
drivers/gpu/arm/mali/device/: mali_kbase_device.c  mali_kbase_device.h  mali_kbase_device_hw.c  mali_kbase_device_internal.h
drivers/gpu/arm/mali/gpu/: mali_kbase_gpu.c  mali_kbase_gpu_regmap.h
drivers/gpu/arm/mali/hwcnt/: Kbuild
drivers/gpu/arm/mali/include/: version_compat_defs.h
drivers/gpu/arm/mali/ipa/: mali_kbase_ipa.c  mali_kbase_ipa.h  mali_kbase_ipa_debugfs.c  mali_kbase_ipa_simple.c
drivers/gpu/arm/mali/jm/: mali_kbase_jm_defs.h  mali_kbase_js_defs.h
drivers/gpu/arm/mali/mmu/: mali_kbase_mmu.c  mali_kbase_mmu.h  mali_kbase_mmu_hw.h  mali_kbase_mmu_hw_direct.c
drivers/gpu/arm/mali/platform/: Kconfig
drivers/gpu/arm/mali/tests/: Kbuild  Kconfig  Mconfig
drivers/gpu/arm/mali/tl/: Kbuild  mali_kbase_timeline.c  mali_kbase_timeline_io.c  mali_kbase_tracepoints.h
(+10209 files in other folders)
