# Copyright (C) 2021 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(
    default_visibility = [
        "//visibility:public",
    ],
)

load("//build/kernel/kleaf:common_kernels.bzl", "define_common_kernels")

_aarch64_additional_kmi_symbol_lists = [
    # keep sorted
    "android/abi_gki_aarch64_core",
    "android/abi_gki_aarch64_db845c",
    "android/abi_gki_aarch64_fips140",
    "android/abi_gki_aarch64_generic",
    "android/abi_gki_aarch64_hikey960",
    "android/abi_gki_aarch64_type_visibility",
    "android/abi_gki_aarch64_virtual_device",
]

define_common_kernels(target_configs = {
    # Sync with build.config.gki.aarch64
    "kernel_aarch64": {
        "kmi_symbol_list": "android/abi_gki_aarch64",
        "additional_kmi_symbol_lists": _aarch64_additional_kmi_symbol_lists,
        "abi_definition": "android/abi_gki_aarch64.xml",
    },
    "kernel_aarch64_debug": {
        "kmi_symbol_list": "android/abi_gki_aarch64",
        "additional_kmi_symbol_lists": _aarch64_additional_kmi_symbol_lists,
        "abi_definition": "android/abi_gki_aarch64.xml",
    },
})
