# SPDX-License-Identifier: GPL-2.0
# Copyright (C) 2021 The Android Open Source Project

load("//build/kernel/kleaf:common_kernels.bzl", "define_common_kernels")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

_aarch64_additional_kmi_symbol_lists = [
    # keep sorted
    "android/abi_gki_aarch64_asr",
    "android/abi_gki_aarch64_core",
    "android/abi_gki_aarch64_db845c",
    "android/abi_gki_aarch64_exynos",
    "android/abi_gki_aarch64_fips140",
    "android/abi_gki_aarch64_galaxy",
    "android/abi_gki_aarch64_generic",
    "android/abi_gki_aarch64_hikey960",
    "android/abi_gki_aarch64_rockchip",
    "android/abi_gki_aarch64_rtkstb",
    "android/abi_gki_aarch64_telechips",
    "android/abi_gki_aarch64_type_visibility",
    "android/abi_gki_aarch64_virtual_device",
]

define_common_kernels(target_configs = {
    # Sync with build.config.gki.aarch64
    "kernel_aarch64": {
        "kmi_symbol_list": "android/abi_gki_aarch64",
        "additional_kmi_symbol_lists": _aarch64_additional_kmi_symbol_lists,
        "abi_definition": "android/abi_gki_aarch64.xml",
    },
    "kernel_aarch64_debug": {
        "kmi_symbol_list": "android/abi_gki_aarch64",
        "additional_kmi_symbol_lists": _aarch64_additional_kmi_symbol_lists,
        "abi_definition": "android/abi_gki_aarch64.xml",
    },
})
